streamlit UI, layout customization and dashboard

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1727,32 +1727,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstring\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ascii_lowercase\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28mdict\u001b[39m(i, count)\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mdict\u001b[39m\u001b[38;5;241m.\u001b[39mkeys \u001b[38;5;241m==\u001b[39m i:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(i,count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 1, 'e': 1, 'l': 1, 'o': 1}\n"
      ]
     }
    ],
    "source": [
     "#1 error\n",
     "str = 'hello'\n",
-    "dict = {}\n",
-    "count = 0\n",
+    "d = {}\n",
+    "count = 1\n",
     "for i in str:\n",
-    "    from string import ascii_lowercase\n",
-    "    dict(i, count)\n",
-    "    if dict.keys == i:\n",
-    "        dict = dict(i,count + 1)\n",
-    "\n",
+    "    if i != d.keys():\n",
+    "        d[i] = count\n",
+    "    else:\n",
+    "        count = count + 1\n",
+    "        d[i] = count\n",
+    "print(d)\n",
     "\n"
    ]
   },
@@ -1843,28 +1840,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m dict2 \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m3\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m4\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m5\u001b[39m}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m dict2\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m dict1\u001b[38;5;241m.\u001b[39mkeys() \u001b[38;5;241m==\u001b[39m dict2(i):\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28mprint\u001b[39m(i)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "c\n"
      ]
     }
    ],
    "source": [
-    "#6 error\n",
+    "#6\n",
     "dict1 = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "dict2 = {\"b\": 3, \"c\": 4, \"d\": 5}\n",
-    "for i in dict2.keys():\n",
-    "    if dict1.keys() == dict2(i):\n",
-    "        print(i)"
+    "for k in dict1.keys():\n",
+    "    for i in dict2.keys():\n",
+    "        if k == i:\n",
+    "            print(k)"
    ]
   },
   {
@@ -1999,11 +1994,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i,j \u001b[38;5;129;01min\u001b[39;00m dict2\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;241m==\u001b[39m i:\n\u001b[1;32m----> 8\u001b[0m             diff[k] \u001b[38;5;241m=\u001b[39m diff\u001b[38;5;241m.\u001b[39mupdate(j\u001b[38;5;241m-\u001b[39mv)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(diff)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "#13 error\n"
+    "#13 error\n",
+    "dict1 = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "dict2 = {\"b\": 2, \"c\": 3, \"d\": 4}\n",
+    "diff = {}\n",
+    "for k,v in dict1.items():\n",
+    "    for i,j in dict2.items():\n",
+    "        if k == i:\n",
+    "            diff[k] = diff.update(j-v)\n",
+    "print(diff)"
    ]
   },
   {
@@ -2028,22 +2043,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('a', 1), ('b', 2), ('c', 3)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#15 error\n",
+    "#15\n",
     "data = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
-    "tup = tuple(data.values())\n",
-    "print(tup)"
+    "list(tuple(data.items()))"
    ]
   },
   {
@@ -2087,55 +2104,50 @@
    ],
    "source": [
     "#17 error\n",
-    "d = {\"a\": 1, \"b\": {\"c\": 2, \"d\": 3}, \"e\": 4}\n",
-    "list(d.values())"
+    "d = {\"a\": 1, \"b\": {\"c\": 2, \"d\": 3}, \"e\": 4}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "a 10\n",
       "c 10\n"
      ]
     }
    ],
    "source": [
-    "#18 error\n",
+    "#18\n",
     "pairs = {\"a\": 10, \"b\": 5, \"c\": 10}\n",
-    "max(pairs.values())\n",
-    "print(max(pairs.keys()) ,max(pairs.values()))"
+    "for k,v in pairs.items():\n",
+    "    if v == max(pairs.values()):\n",
+    "        print(k,v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m values \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m      4\u001b[0m ans \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(keys, values))\n\u001b[1;32m----> 5\u001b[0m info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(ans)\n\u001b[0;32m      6\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(ans)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n"
      ]
     }
    ],
    "source": [
-    "#19 error\n",
+    "#19\n",
     "keys = [\"a\", \"b\", \"c\"]\n",
     "values = [1, 2, 3]\n",
-    "ans = list()\n",
-    "info = dict(ans)\n",
-    "answer = 0\n",
-    "print(ans)\n"
+    "pair = zip(keys, values)\n",
+    "print(dict(pair))\n"
    ]
   },
   {
