some operations on file handling

--- a/file_handling.ipynb
+++ b/file_handling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,59 @@
    "source": [
     "data = read_file('sample.txt')\n",
     "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_file(path, content):\n",
+    "    with open(path, 'w') as file:\n",
+    "        file.write(content)\n",
+    "\n",
+    "def append_file(path, content):\n",
+    "    with open(path, 'a') as file:\n",
+    "        file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_file(\"one.txt\",\"once upon a time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "append_file(\"one.txt\", \"\\nthere was a king\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'once upon a time\\nthere was a king'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_file(\"one.txt\")"
    ]
   },
   {
