--- a/oop/classes.ipynb
+++ b/oop/classes.ipynb
@@ -214,6 +214,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "inheritance \n",
+    "- there are no access modifiers in python, everything is public\n",
+    "- constructor\n",
+    "- method overriding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parent class\n",
+    "class Shape:\n",
+    "    def __init__(self, color, filled) -> None:\n",
+    "        self.color = color\n",
+    "        self.filled = filled\n",
+    "\n",
+    "    def show(self):\n",
+    "        print(\"Color:\", self.color)\n",
+    "        print(\"Filled:\", self.filled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# child class\n",
+    "class Circle(Shape):\n",
+    "    # constructor overriding\n",
+    "    def __init__(self, radius, color, filled) -> None:\n",
+    "        super().__init__(color, filled)\n",
+    "        self.radius = radius\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    # constructor overriding\n",
+    "    def __init__(self, l, w, color, filled) -> None:\n",
+    "        super().__init__(color, filled)\n",
+    "        self.length = l\n",
+    "        self.width = w\n",
+    "\n",
+    "    # method overriding\n",
+    "    def show(self):\n",
+    "        super().show()\n",
+    "        print(\"Length:\", self.length)\n",
+    "        print(\"Width:\", self.width)\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "class Triangle(Shape):\n",
+    "    def __init__(self, base, height) -> None:\n",
+    "        # parent class constructor fixed values\n",
+    "        super().__init__(color='red', filled=True)\n",
+    "        self.base = base\n",
+    "        self.height = height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color: red\n",
+      "Filled: True\n",
+      "Color: green\n",
+      "Filled: False\n",
+      "Length: 10\n",
+      "Width: 5\n",
+      "Color: red\n",
+      "Filled: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "circle = Circle(5, \"red\", True)\n",
+    "circle.show()\n",
+    "rect = Rectangle(10, 5, \"green\", False)\n",
+    "rect.show()\n",
+    "tri = Triangle(10, 5)\n",
+    "tri.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
