matplotlib lasr ques

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2976,7 +2976,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e429b4f410>"
+       "<matplotlib.legend.Legend at 0x1ce2439f7a0>"
       ]
      },
      "execution_count": 7,
@@ -3137,6 +3137,17 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "scount = setosa.count()\n",
+    "versicount = versicolor.count()\n",
+    "vir = virginica.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
@@ -3145,7 +3156,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#5\u001b[39;00m\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mbar(x\u001b[38;5;241m=\u001b[39msetosa)\n",
+      "Cell \u001b[1;32mIn[19], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#5\u001b[39;00m\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mbar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSpecies\u001b[39m\u001b[38;5;124m'\u001b[39m, y\u001b[38;5;241m=\u001b[39m[scount,versicount,vir])\n",
       "\u001b[1;31mTypeError\u001b[0m: bar() missing 1 required positional argument: 'height'"
      ]
     },
@@ -3162,8 +3173,27 @@
    "source": [
     "#5\n",
     "plt.figure(figsize=(10,5))\n",
-    "plt.bar(x=setosa)"
+    "plt.bar('Species', y=[scount,versicount,vir])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "NDFrame.asfreq() missing 1 required positional argument: 'freq'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m setosa\u001b[38;5;241m.\u001b[39masfreq()\n",
+      "\u001b[1;31mTypeError\u001b[0m: NDFrame.asfreq() missing 1 required positional argument: 'freq'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
