--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2482,31 +2482,40 @@
    ],
    "source": [
     "#14\n",
-    "print(mtrx[::-1])"
+    "print(mtrx[::-1])            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#15 error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m a\u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m np\u001b[38;5;241m.\u001b[39mdiagonal(a,(\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m5\u001b[39m))\n",
-      "File \u001b[1;32mc:\\Users\\Public\\miniconda3\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:1766\u001b[0m, in \u001b[0;36mdiagonal\u001b[1;34m(a, offset, axis1, axis2)\u001b[0m\n\u001b[0;32m   1764\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m asarray(a)\u001b[38;5;241m.\u001b[39mdiagonal(offset\u001b[38;5;241m=\u001b[39moffset, axis1\u001b[38;5;241m=\u001b[39maxis1, axis2\u001b[38;5;241m=\u001b[39maxis2)\n\u001b[0;32m   1765\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1766\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m asanyarray(a)\u001b[38;5;241m.\u001b[39mdiagonal(offset\u001b[38;5;241m=\u001b[39moffset, axis1\u001b[38;5;241m=\u001b[39maxis1, axis2\u001b[38;5;241m=\u001b[39maxis2)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object cannot be interpreted as an integer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  4.  9. 16. 25.]\n",
+      " [ 0.  2.  9. 16. 25.]\n",
+      " [ 0.  0.  3. 16. 25.]\n",
+      " [ 0.  0.  0.  4. 25.]\n",
+      " [ 0.  0.  0.  0.  5.]]\n"
      ]
     }
    ],
    "source": [
-    "#15 error\n",
-    "a= [1,2,3,4,5]\n",
-    "np.diagonal(a,(5,5))"
+    "#15\n",
+    "arr = np.array([1,2,3,4,5])\n",
+    "n = len(arr)\n",
+    "mtrx = np.zeros((n,n))\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if i == j :\n",
+    "            mtrx[i,j] = arr[i]\n",
+    "        elif i < j:\n",
+    "            mtrx[i,j] = arr[j] ** 2\n",
+    "\n",
+    "print(mtrx)"
    ]
   },
   {
